--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-index.css">
+    <!-- bootstrap cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="/index-css-js/style-index.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello trial</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit iusto, corporis velit recusandae a delectus sint sunt itaque excepturi soluta ex animi aliquam ipsam. Tenetur laborum placeat earum laudantium ex?</p>
-    
+
+    bootstrap js
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
+    <script src="/index-css-js/script-index.js"></script>
 </body>
 </html>
