Add landing page background

--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
       </nav>
       <!-- end of navbar -->
 
-      <h1>It's Christmas time!</h1>
-      <img src="/landing-page/img/ornaments.png" alt="" >
+      <div id="container-bg">
+          <div class="content-wrapper">
+            <h1>Christmas<br> is the time of  <br><span class=cross>family</span><br>  Zoom calls</h1>
+
+          </div>
+      </div>
+
+      <div class="drag">
+
+      </div>
 
 
 
