--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ TODO: appear effect for the text -->
 
        <!-- drag & drop game start -->
 
+  
 
   <div id="game">
     <img class="game-small-icon" src="/landing-page/img/010-teddy-bear.png" alt="teddy">
@@ -178,33 +179,33 @@ TODO: appear effect for the text -->
 
    <!-- gift generator start -->
 
-  <div id="game">
-    <img class="game-small-icon" src="/landing-page/img/015-christmas-tree.png" alt="gifts">
-    <img class="game-image" src="/landing-page/img/images.png" alt="Drag and Drop">
+  <div id="game-three">
+    <img class="game-small-icon-three" src="/landing-page/img/015-christmas-tree.png" alt="gifts">
+    <img class="game-image-three" src="/landing-page/img/images.png" alt="Drag and Drop">
 
-    <div class="game-text">
+    <div class="game-text-three">
         <h3>Need an idea for the beloved one?</h3>
         <!-- TODO: put a description of the game and link up the urm -->
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
-        <a href="#"><p class="link-game">TRY IT OUT</p></a>
+        <a href="#"><p class="link-game-three">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
     </div>      
 
   </div>
 
     <!-- bingo start -->
-    <div id="game-two">
+    <div id="game-four">
 
-    <div class="game-text-two">
+    <div class="game-text-four">
         <h3>To see a you the luck one?</h3>
         <!-- TODO: put a description of the game and link up the urm -->
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
-        <a href="#"><p class="link-game-two">TRY IT OUT</p></a>
+        <a href="#"><p class="link-game-four">TRY IT OUT</p></a>
         
     </div>   
     
-    <img class="game-small-icon-two" src="/landing-page/img/008-nutcracker.png" alt="nutcracker">
-    <img class="game-image-two" src="/landing-page/img/images.png" alt="Drag and Drop">
+    <img class="game-small-icon-four" src="/landing-page/img/008-nutcracker.png" alt="nutcracker">
+    <img class="game-image-four" src="/landing-page/img/images.png" alt="Drag and Drop">
 
     </div>
 
