Change background color for sections/landingpage

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ TODO: appear effect for the text -->
     <div class="game-text">
         <h3>Make your own character!</h3>
         <!-- TODO: put a description of the game and link up the urm -->
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quaerat.</p>
         <a href="#"><p class="link-game">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
     </div>      
@@ -167,8 +167,8 @@ TODO: appear effect for the text -->
     <div class="game-text-two">
         <h3>Let's have a race!</h3>
         <!-- TODO: put a description of the game and link up the urm -->
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
-        <a href="#"><p class="link-game-two">TRY IT OUT</p></a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
+          <a href="#"><p class="link-game-two">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
     </div>   
     
@@ -186,7 +186,7 @@ TODO: appear effect for the text -->
     <div class="game-text-three">
         <h3>Need an idea for the beloved one?</h3>
         <!-- TODO: put a description of the game and link up the urm -->
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
         <a href="#"><p class="link-game-three">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
     </div>      
@@ -199,7 +199,7 @@ TODO: appear effect for the text -->
     <div class="game-text-four">
         <h3>To see a you the luck one?</h3>
         <!-- TODO: put a description of the game and link up the urm -->
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis deleniti rerum aliquam? Nesciunt sint similique suscipit ipsa provident dolorum delectus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
         <a href="#"><p class="link-game-four">TRY IT OUT</p></a>
         
     </div>   
