Adjust speed for typing effect on js/landingpage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- TODO: fix the page down btn
-TODO: appear effect for the text -->
+-->
 
 
 <!DOCTYPE html>
@@ -134,7 +134,7 @@ TODO: appear effect for the text -->
       <!-- landing page start -->
             <div class="landingsection">
                 <div class="landingsection-text">
-                    <h1> <span class="christ">Christmas</span><br> is the time of  <br><span class=cross>family</span><br>  <span class="typing"></span></h1>
+                    <h1> <span class="christ">Christmas</span><br> is the time of  <br><span class=cross>family</span><br>  <span class="typing">ZOOM CALLS AND GAMES</span></h1>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto!</p>
                     
                 <a href="#"><i class="fas fa-caret-down"></i></a>
