--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ho-Ho</title>
     <link rel="stylesheet" href="gift-style.css">
-    <link rel ="shortcut icon" type ='image/png' href="./image/favicon.png">
+    <link rel ="shortcut icon" type ='image/png' href="image/favicon.png">
 </head>
 <body>
+    <h1>Welcome to Name Generator</h1>
+    <h1>Secret Santa</h1>
+    <form id="myform">
+
+        <input type="text" placeholder="Enter Names" id="names" />
+
+        <div class="button">
+
+            <button id="submit">Enter</button>
+        </div>
+
+    </form>
+
+    <div class="output">
+
+        <p id="outputText">Lets see who is joining Secret Santa!</p>
+    </div>
+
+
+
    <script src="gift-script.js"></script>
 </body>
 </html>
