Add second button for full list

--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -10,16 +10,18 @@
 <body>
     <h1>Welcome to Name Generator</h1>
     <h1>Secret Santa</h1>
-    <form id="myform">
+    <form id="inputpeople">
 
         <input type="text" placeholder="Enter Names" id="names" />
 
         <div class="button">
 
-            <button id="submit">Enter</button>
+            <button id="submit">Add names</button>
         </div>
 
     </form>
+
+    <button id="result">Click for final list</button>
 
     <div class="output">
 
