Add snow tile sprite, add tiles div

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <canvas class="game" id="gameContainer"></canvas>
+    <div class="tiles"></div>
     <script src="./JS/running-app.js"></script>
 </body>
 </html>
