--- a/running-game/running.html
+++ b/running-game/running.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday runner!</title>
     <link rel="stylesheet" href="./css/running-style.css">
 </head>
+
 <body>
-    <canvas class="game" id="gameContainer"></canvas>
-    <div class="tiles"></div>
+    <div class="container">
+        <canvas class="game" id="gameContainer"></canvas>
+        <div class="tiles"></div>
+        <div class="moon"></div>
+    </div>
     <script src="./JS/running-app.js"></script>
 </body>
+
 </html>
