complete scss for bingo page

--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -52,7 +52,7 @@
           
 
         
-              <button id="get-card-btn"><h3>GET <br>A CARD</h3></button>
+              <button id="get-card-btn"><h3>GET A CARD</h3></button>
           </div>
 
           <div class="player-card">
