Add footer into navbar's html

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     <div class="game-text">
         <h3>Make your own character!</h3>
-        <!-- TODO: put a description of the game and link up the urm -->
+        <!-- TODO: put a description of the game and link up the url -->
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quaerat.</p>
         <a href="#"><p class="link-game">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
@@ -166,7 +166,7 @@
     
     <div class="game-text-two">
         <h3>Let's have a race!</h3>
-        <!-- TODO: put a description of the game and link up the urm -->
+        <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
           <a href="#"><p class="link-game-two">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
@@ -185,7 +185,7 @@
 
     <div class="game-text-three">
         <h3>Need an idea for the beloved one?</h3>
-        <!-- TODO: put a description of the game and link up the urm -->
+        <!-- TODO: put a description of the game and link up the url -->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
         <a href="#"><p class="link-game-three">TRY IT OUT</p></a>
         <a href="#"><i class="fas fa-caret-down"></i></a>
@@ -198,7 +198,7 @@
 
     <div class="game-text-four">
         <h3>To see a you the luck one?</h3>
-        <!-- TODO: put a description of the game and link up the urm -->
+        <!-- TODO: put a description of the game and link up the url -->
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
         <a href="#"><p class="link-game-four">TRY IT OUT</p></a>
         
