--- a/navbar+footer/navbar-footer.html
+++ b/navbar+footer/navbar-footer.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" type="image/png" href="/navbar/snowflake.png">
 </head>
 <body>
+
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <div class="container-fluid">
@@ -43,6 +44,20 @@
         </div>
       </nav>
       <!-- end of navbar -->
+
+    <main>
+      <!-- your page content here   -->
+
+
+      
+
+    </main>  
+    <!-- footer start here     -->
+    <footer id="footer">
+      <div class="footer-image">
+      <img src="../tree-image/trees.png" alt="snow">
+    </div>
+    </footer>  
 
 
 
