--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -30,6 +30,25 @@
 
 
 
+
+    <!-- <img src="image/socks.png" target="socks" alt="socks"> -->
+    <img src="image/sleigh.png" target="one" alt="sleigh">
+    <img src="image/sleigh.png" target="two" alt="sleigh">
+    <img src="image/sleigh.png" target="three" alt="sleigh">
+    <img src="image/sleigh.png" target="four" alt="sleigh">
+    
+    <img src="image/sleigh.png" target="five" alt="sleigh">
+    <img src="image/sleigh.png" target="six" alt="sleigh">
+
+
+
+    
+
+
+
+
+
+
    <script src="gift-script.js"></script>
 </body>
 </html>
