Update navbar html

--- a/navbar+footer/navbar-footer.html
+++ b/navbar+footer/navbar-footer.html
@@ -6,11 +6,15 @@
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     
+    <!-- TODO: if you have import the common-style.css replace this stylesheet to your own one -->
     <link rel="stylesheet" href="/common-css/style-common.css">
     <title>Ho Ho Holiday</title>
+
+    <!-- TODO: change the path of the favicon according to your page location -->
     <!-- favicon insert -->
-    <link rel="shortcut icon" type="image/png" href="/navbar/snowflake.png">
+    <link rel="shortcut icon" type="image/png" href="snowflake.png">
 </head>
+
 <body>
 
     <!-- navbar start -->
@@ -48,15 +52,18 @@
     <main>
       <!-- your page content here   -->
 
+      <!-- TODO: put your page html inside this <main> tag -->
+
 
       
 
     </main>  
+
     <!-- footer start here     -->
     <footer id="footer">
       <div class="footer-image">
       <img src="../tree-image/trees.png" alt="snow">
-    </div>
+      </div>
     </footer>  
 
 
