--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style-bingo.css">
     <title>Ho Ho Holiday</title>
     <!-- favicon insert -->
-    <link rel="shortcut icon" type="image/png" href="/navbar/snowflake.png">
+    <link rel="shortcut icon" type="image/png" href="">
 </head>
 <body>
    
