--- a/navbar+footer/navbar-footer.html
+++ b/navbar+footer/navbar-footer.html
@@ -28,8 +28,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <!-- TODO: to change the active below accordingly -->
-                <a class="nav-link active" aria-current="page" href="#"><p>Home</p></a>
+                <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link " href="#"><p>Drag & Drop</p></a>
