--- a/running-game/running.html
+++ b/running-game/running.html
@@ -9,12 +9,14 @@
 </head>
 
 <body>
+    <div id="snow"></div>
     <div class="container">
         <canvas class="game" id="gameContainer"></canvas>
         <div class="tiles"></div>
         <div class="moon"></div>
     </div>
     <script src="./JS/running-app.js"></script>
+    <script src="./JS/snow.js"></script>
 </body>
 
 </html>
