--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -18,7 +18,7 @@
   <!-- navbar start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#" style="color:#E1F2F7;">
+      <a class="navbar-brand" href="../index.html" style="color:#E1F2F7;">
         <h2><b>HO-HO-HOLIDAY</b></h2></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,6 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
           <li class="nav-item">
-            <!-- TODO: to change the active below accordingly -->
             <a class="nav-link" aria-current="page" href="../index.html"><p>Home</p></a>
           </li>
           <li class="nav-item ">
@@ -36,7 +35,7 @@
             <a class="nav-link" href="../running-game/running.html"><p>Running Game</p></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><p>Gift Idea Generator</p></a>
+            <a class="nav-link" href="../gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="#"><p>Bingo</p></a>
