--- a/navbar+footer/navbar-footer.html
+++ b/navbar+footer/navbar-footer.html
@@ -20,8 +20,7 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <div class="container-fluid">
-          <!-- TODO: change the path of links according to your location -->
-          <a class="navbar-brand" href="/index.html" style="color:#E1F2F7;">
+          <a class="navbar-brand" href="#" style="color:#E1F2F7;">
             <h2><b>HO-HO-HOLIDAY</b></h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,21 +28,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html"><p>Home</p></a>
+                <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link " href="#"><p>Drag & Drop</p></a>
               </li>
               <li class="nav-item">
-                <!-- TODO: change the path of links according to your location -->
                 <a class="nav-link" href="#"><p>Running Game</p></a>
               </li>
               <li class="nav-item">
-                <!-- TODO: change the path of links according to your location -->
                 <a class="nav-link" href="#"><p>Gift Idea Generator</p></a>
               </li>
               <li class="nav-item">
-                <!-- TODO: change the path of links according to your location -->
                 <a class="nav-link" href="#"><p>Bingo</p></a>
               </li>
             </ul>        
@@ -73,9 +69,6 @@
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-
-    <!-- TODO: put your own js below -->
 
 </body>
 </html>
