Add app.js for reset

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -15,7 +15,8 @@
         <div class="tiles"></div>
         <div class="moon"></div>
     </div>
-    <script src="./JS/running-app.js"></script>
+   <!--<script src="./JS/running-app.js"></script> --> 
+   <script src="./JS/app.js"></script>
     <script src="./JS/snow.js"></script>
 </body>
 
