Add instruction to navbar+footer html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/landing-page/style-index.css">
 
     <!-- favicon insert -->
-    <link rel="shortcut icon" type="image/png" href="/navbar/snowflake.png">
+    <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
 
     <!-- fontawsome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
@@ -39,13 +39,13 @@
                 <a class="nav-link " href="#"><p>Drag & Drop</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><p>Running Game</p></a>
+                <a class="nav-link" href="/running-game/running.html"><p>Running Game</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><p>Gift Idea Generator</p></a>
+                <a class="nav-link" href="/gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><p>Bingo</p></a>
+                <a class="nav-link" href="/bingo/bingo.html"><p>Bingo</p></a>
               </li>
             </ul>        
           </div>
@@ -132,10 +132,10 @@
       <!-- landing page start -->
       <div class="landingsection">
           <div class="landingsection-text">
-              <h1> <span class="christ">Christmas</span><br> is the time of  <br><span class=cross>family</span><br>  <span class="typing">ZOOM CALLS AND GAMES</span></h1>
+              <h1> <span class="christ">Christmas</span> is the time of  <br><span class=cross>family</span><br>  <span class="typing">ZOOM CALLS AND GAMES</span></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, architecto!</p>
               
-              <a href="#"><i class="fas fa-caret-down"></i></a>
+              <a href="#game"><i class="fas fa-caret-down"></i></a>
           </div>
           <img src="/landing-page/img/043-movie.png" alt="Santa Claus Online">
       </div>
