Add gameWindow class

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -9,19 +9,21 @@
 </head>
 
 <body>
-    <div id="snow"></div>
-    <div class="border">
-        <div class="borderleft"></div>
-        <div class="bordermiddle"></div>
-        <div class="borderright"></div>
+    <div class="gameWindow">
+        <div id="snow"></div>
+        <div class="border">
+            <div class="borderleft"></div>
+            <div class="bordermiddle"></div>
+            <div class="borderright"></div>
+        </div>
+        <div class="container">
+            <canvas class="game" id="gameContainer"></canvas>
+            <div class="tiles"></div>
+            <div class="moon"></div>
+        </div>
     </div>
-    <div class="container">
-        <canvas class="game" id="gameContainer"></canvas>
-        <div class="tiles"></div>
-        <div class="moon"></div>
-    </div>
-   <!--<script src="./JS/running-app.js"></script> --> 
-   <script src="./JS/app.js"></script>
+    <!--<script src="./JS/running-app.js"></script> -->
+    <script src="./JS/app.js"></script>
     <script src="./JS/snow.js"></script>
 </body>
 
