Add animation on icons + Adjust image appear effect/landing page

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
       </svg>
 
       <!-- landing page start -->
+      <div id="landingsection">
       <div class="landingsection">
           <div class="landingsection-text">
               <h1> <span class="christ">Christmas</span> is the time of  <br><span class=cross>family</span><br>  <span class="typing">ZOOM CALLS AND GAMES</span></h1>
@@ -139,7 +140,7 @@
           </div>
           <img src="/landing-page/img/043-movie.png" alt="Santa Claus Online">
       </div>
-
+    </div>
 
       <!-- drag & drop game start -->
 
@@ -154,7 +155,7 @@
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quaerat.</p>
           <a href="#"><p class="link-game">TRY IT OUT</p></a>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
+          <a href="#game-two"><i class="fas fa-caret-down"></i></a>
         </div>      
 
       </div>
@@ -166,8 +167,8 @@
           <h3>Let's have a race!</h3>
           <!-- TODO: put a description of the game and link up the url -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-            <a href="#"><p class="link-game-two">TRY IT OUT</p></a>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
+            <a href="/running-game/running.html"><p class="link-game-two">TRY IT OUT</p></a>
+          <a href="#game-three"><i class="fas fa-caret-down"></i></a>
         </div>   
 
         <img class="game-small-icon-two" src="/landing-page/img/005-reindeer.png" alt="reindeer">
@@ -181,11 +182,13 @@
         <img class="game-image-three" src="/landing-page/img/images.png" alt="Drag and Drop">
 
         <div class="game-text-three">
+
           <h3>Need an idea for the beloved one?</h3>
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-          <a href="#"><p class="link-game-three">TRY IT OUT</p></a>
-          <a href="#"><i class="fas fa-caret-down"></i></a>
+          <a href="/gift-generator/gitf-index.html"><p class="link-game-three">TRY IT OUT</p></a>
+          <a href="#game-four"><i class="fas fa-caret-down"></i></a>
+
         </div>      
 
       </div>
@@ -194,11 +197,13 @@
       <div id="game-four">
 
         <div class="game-text-four">
-          <h3>To see a you the luck one?</h3>
+
+          <h3>To see your luck?</h3>
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-          <a href="#"><p class="link-game-four">TRY IT OUT</p></a>
-          
+          <a href="/bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
+          <a href="#landingsection"><i class="fas fa-caret-up"></i></a>
+
         </div>   
 
         <img class="game-small-icon-four" src="/landing-page/img/008-nutcracker.png" alt="nutcracker">
