Add logo to navbar/navbar+footer

--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="color:#E1F2F7;">
-            <h2><b>HO-HO-HOLIDAY</b></h2></a>
+          <a class="navbar-brand" href="#">
+            <img src="/landing-page/img/icon 1.png" alt="icon" width="36" height="30" class="d-inline-block align-top">
+            <h2 class="d-inline-block align-top>Ho Ho Holiday" style="font-weight: 700;">Ho Ho Holiday</h2>
+          </a>
+    
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
