--- a/navbar+footer/navbar-footer.html
+++ b/navbar+footer/navbar-footer.html
@@ -21,6 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
+            <!-- TODO: change the img path accordingly -->
             <img src="/landing-page/img/icon 1.png" alt="icon" width="36" height="30" class="d-inline-block align-top">
             <h2 class="d-inline-block align-top>Ho Ho Holiday" style="font-weight: 700;">Ho Ho Holiday</h2>
           </a>
