--- a/running-game/running.html
+++ b/running-game/running.html
@@ -20,8 +20,12 @@
         <div class="tiles"></div>
         <div class="moon"></div>
     </div>
-   <!--<script src="./JS/running-app.js"></script> --> 
-   <script src="./JS/app.js"></script>
+
+    <div class="sound">
+       <div class="muteButton"></div>
+    </div>
+    <!--<script src="./JS/running-app.js"></script> -->
+    <script src="./JS/app.js"></script>
     <script src="./JS/snow.js"></script>
 </body>
 
