Remove sound function, Youtube ToS violation

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -21,12 +21,13 @@
         <div class="moon"></div>
     </div>
 
-    <div class="sound">
+    <!--<div class="sound">
        <div class="muteButton"></div>
-    </div>
+    </div>-->
     <!--<script src="./JS/running-app.js"></script> -->
     <script src="./JS/app.js"></script>
     <script src="./JS/snow.js"></script>
+    <!-- <script src="./JS/sound.js"></script> -->
 </body>
 
 </html>
