--- a/running-game/running.html
+++ b/running-game/running.html
@@ -5,10 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday runner!</title>
+
+    <!-- Running-Game css-->
     <link rel="stylesheet" href="./css/running-style.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Favicon insert-->
+    <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
 </head>
 
 <body>
+<!-- Nav-Bar -->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <h2 class="d-inline-block align-top>Ho Ho Holiday" style="font-weight: 700;">Ho Ho Holiday</h2>
+      </a>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/running-game/running.html"><p>Running Game</p></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bingo/bingo.html"><p>Bingo</p></a>
+          </li>
+        </ul>        
+      </div>
+    </div>
+  </nav>
+  <!-- end of navbar -->
+
+
+
+
+
+
+
     <div id="snow"></div>
     <div class="border">
         <div class="borderleft"></div>
