Comment out boostrap cdn & js

--- a/running-game/running.html
+++ b/running-game/running.html
@@ -8,9 +8,14 @@
 
     <!-- Running-Game css-->
     <link rel="stylesheet" href="./css/running-style.css">
-    <!-- Bootstrap -->
+    <!-- Bootstrap cdn-->
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    -->
     <!-- Favicon insert-->
     <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
+    <!--FontAwesome cdn-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -69,6 +74,11 @@
     <!--<div class="sound">
        <div class="muteButton"></div>
     </div>-->
+
+
+    <!--Bootstrap JS-->
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    -->
     <!--<script src="./JS/running-app.js"></script> -->
     <script src="./JS/app.js"></script>
     <script src="./JS/snow.js"></script>
