--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -57,8 +57,12 @@
     <source src="img/lose.mp3" type="audio/mpeg">
   </audio>
 
-  <div class="replay-btn-div">
-    <button id="replay"><h1>TRY AGAIN?</h1></button>
+  <div class="replay-btn-div-lose">
+    <button id="replay"><h1>YOU LOSE <br> TRY AGAIN?</h1></button>
+  </div>
+
+  <div class="replay-btn-div-win">
+    <button id="replay"><h1>YOU WIN <br> TRY AGAIN?</h1></button>
   </div>
 
   <div class="container">
