--- a/running-game/running.html
+++ b/running-game/running.html
@@ -65,7 +65,7 @@
     <div id="snow"></div>
 
     <div class="game-console">
-      <div class="border">
+      <div class="border-game">
           <div class="borderleft"></div>
           <div class="bordermiddle"></div>
           <div class="borderright"></div>
