add text and header to dress the elf page

--- a/dress-the-elf/dressup.html
+++ b/dress-the-elf/dressup.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="../common-css/style-common.css">
     <link href="dressup-style.css" rel="stylesheet">
-    <link rel="shortcut icon" type="image/png" href="snowflake.png">
+    <link rel="shortcut icon" type="image/png" href="../navbar+footer/snowflake.png">
 
     <title>Dress the elf</title>
 </head>
@@ -26,7 +26,7 @@
                             <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+                            <a class="nav-link " href="#"><p>Dress the elf</p></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><p>Running Game</p></a>
@@ -44,6 +44,11 @@
 
         <main>
             <div class="container">
+                <div class="explain">
+                    <h1>Dress the elf!</h1>
+                    <p>This little helper doesn't know what to wear to the party.
+                    Maybe you can help her pick out the right outfit?</p>
+                </div>
                 <div id="container-game">
                     <div class="BlockWrapper BlockWrapper--isDropzone" id="wrapper">
                         <img src="img/elfvectorbase.png" alt="elf" id="elf">
