Change paths for link/landingpage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     
     <!-- css of landing-page -->
-    <link rel="stylesheet" href="/landing-page/style-index.css">
+    <link rel="stylesheet" href="landing-page/style-index.css">
 
     <!-- favicon insert -->
-    <link rel="shortcut icon" type="image/png" href="/navbar+footer/snowflake.png">
+    <link rel="shortcut icon" type="image/png" href="navbar+footer/snowflake.png">
 
     <!-- fontawsome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
@@ -38,16 +38,16 @@
                 <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+                <a class="nav-link " href="dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/running-game/running.html"><p>Running Game</p></a>
+                <a class="nav-link" href="running-game/running.html"><p>Running Game</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
+                <a class="nav-link" href="gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/bingo/bingo.html"><p>Bingo</p></a>
+                <a class="nav-link" href="bingo/bingo.html"><p>Bingo</p></a>
               </li>
             </ul>        
           </div>
@@ -140,7 +140,7 @@
               
               <a href="#game"><i class="fas fa-caret-down"></i></a>
           </div>
-          <img src="/landing-page/img/043-movie.png" alt="Santa Claus Online">
+          <img src="landing-page/img/043-movie.png" alt="Santa Claus Online">
       </div>
     </div>
 
@@ -149,14 +149,14 @@
 
 
       <div id="game">
-        <img class="game-small-icon" src="/landing-page/img/010-teddy-bear.png" alt="teddy">
-        <img class="game-image" src="/landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-small-icon" src="landing-page/img/010-teddy-bear.png" alt="teddy">
+        <img class="game-image" src="landing-page/img/images.png" alt="Drag and Drop">
 
         <div class="game-text">
-          <h3>Make your own character!</h3>
+          <h3>Dress The Elf!</h3>
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quaerat.</p>
-          <a href="#"><p class="link-game">TRY IT OUT</p></a>
+          <a href="dress-the-elf/dressup.html"><p class="link-game">TRY IT OUT</p></a>
           <a href="#game-two"><i class="fas fa-caret-down"></i></a>
         </div>      
 
@@ -169,26 +169,26 @@
           <h3>Let's have a race!</h3>
           <!-- TODO: put a description of the game and link up the url -->
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-            <a href="/running-game/running.html"><p class="link-game-two">TRY IT OUT</p></a>
+            <a href="running-game/running.html"><p class="link-game-two">TRY IT OUT</p></a>
           <a href="#game-three"><i class="fas fa-caret-down"></i></a>
         </div>   
 
-        <img class="game-small-icon-two" src="/landing-page/img/005-reindeer.png" alt="reindeer">
-        <img class="game-image-two" src="/landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-small-icon-two" src="landing-page/img/005-reindeer.png" alt="reindeer">
+        <img class="game-image-two" src="landing-page/img/images.png" alt="Drag and Drop">
 
       </div>
 
       <!-- gift generator start -->
       <div id="game-three">
-        <img class="game-small-icon-three" src="/landing-page/img/015-christmas-tree.png" alt="gifts">
-        <img class="game-image-three" src="/landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-small-icon-three" src="landing-page/img/015-christmas-tree.png" alt="gifts">
+        <img class="game-image-three" src="landing-page/img/images.png" alt="Drag and Drop">
 
         <div class="game-text-three">
 
           <h3>Need an idea for the beloved one?</h3>
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-          <a href="/gift-generator/gitf-index.html"><p class="link-game-three">TRY IT OUT</p></a>
+          <a href="gift-generator/gitf-index.html"><p class="link-game-three">TRY IT OUT</p></a>
           <a href="#game-four"><i class="fas fa-caret-down"></i></a>
 
         </div>      
@@ -203,13 +203,13 @@
           <h3>To see your luck?</h3>
           <!-- TODO: put a description of the game and link up the url -->
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
-          <a href="/bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
+          <a href="bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
           <a href="#landingsection"><i class="fas fa-caret-up"></i></a>
 
         </div>   
 
-        <img class="game-small-icon-four" src="/landing-page/img/008-nutcracker.png" alt="nutcracker">
-        <img class="game-image-four" src="/landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-small-icon-four" src="landing-page/img/008-nutcracker.png" alt="nutcracker">
+        <img class="game-image-four" src="landing-page/img/images.png" alt="Drag and Drop">
 
       </div>
 
@@ -227,7 +227,7 @@
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-    <script src="/landing-page/script-index.js"></script>
+    <script src="landing-page/script-index.js"></script>
 
 </body>
 </html>
