--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -30,7 +30,7 @@
             <a class="nav-link" aria-current="page" href="../index.html"><p>Home</p></a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+            <a class="nav-link " href="../dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../running-game/running.html"><p>Running Game</p></a>
