--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -7,13 +7,13 @@
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="gift-style.css">
-    <link rel ="shortcut icon" type ='image/png' href="image/favicon.png">
+    <link rel ="shortcut icon" type ='image/png' href="../navbar+footer/snowflake.png">
 </head>
 <body>
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="color:#E1F2F7;">
+          <a class="navbar-brand" href="/index.html" style="color:#E1F2F7;">
             <h2><b>HO-HO-HOLIDAY</b></h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,20 +21,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <!-- TODO: to change the active below accordingly -->
-                <a class="nav-link active" aria-current="page" href="#"><p>Home</p></a>
+                <a class="nav-link active" aria-current="page" href="/index.html"><p>Home</p></a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link " href="#"><p>Drag & Drop</p></a>
+                <a class="nav-link " href="../dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><p>Running Game</p></a>
+                <a class="nav-link" href="../running-game/running.html"><p>Running Game</p></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#"><p>Gift Idea Generator</p></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><p>Bingo</p></a>
+                <a class="nav-link" href="../bingo/bingo.html"><p>Bingo</p></a>
               </li>
             </ul>        
           </div>
