--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <!-- footer start here     -->
     <footer id="footer">
       <div class="footer-image">
-      <img src="../tree-image/trees.png" alt="snow">
+      <img src="tree-image/trees.png" alt="snow">
       </div>
     </footer>  
 
