--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -18,7 +18,7 @@
   <!-- navbar start -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../index.html">
         <h2 class="d-inline-block align-top>Ho Ho Holiday" style="font-weight: 700;">Ho Ho Holiday</h2>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
