--- a/dress-the-elf/dressup.html
+++ b/dress-the-elf/dressup.html
@@ -11,6 +11,7 @@
     <title>Dress the elf</title>
 </head>
     <body>
+    <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
@@ -42,6 +43,7 @@
             </div>
         </nav>
 
+    <!-- Dressup game -->
         <main>
             <div class="container">
                 <div class="explain">
@@ -62,6 +64,7 @@
             </div>
         </main>
 
+    <!-- footer -->
         <footer id="footer">
             <div class="footer-image">
                 <img src="../tree-image/trees.png" alt="snow">
