--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -71,7 +71,8 @@
           <img src="./img/snowflake.png" id="computer-card-image" alt="random_card">
           
           <button id="get-card-btn"><h3>GET A CARD</h3></button>
-          <h4>Remining draws:  <span id="remaining-draw">20</span></h4>
+          <h4> Get 4 cards in a row before<br> finishing all the draws <br><br>
+            Remining draws:  <span id="remaining-draw">20</span></h4>
       </div>
 
       <div class="player-card">
