Update path link for img+nav/giftgenerator

--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html"><p>Home</p></a>
+                <a class="nav-link active" aria-current="page" href="../index.html"><p>Home</p></a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link " href="../dress-the-elf/dressup.html"><p>Dress The Elf</p></a>
@@ -48,7 +48,7 @@
 
 
       <div class="big-image">
-        <img id="gift" src="/gift-generator/image/045-sled.png">
+        <img id="gift" src="/image/045-sled.png">
       </div>
       <h1>Welcome to Name Generator</h1>
       <h1>Secret Santa</h1>
