Change path for img/gift

--- a/gift-generator/gitf-index.html
+++ b/gift-generator/gitf-index.html
@@ -48,7 +48,7 @@
 
 
       <div class="big-image">
-        <img id="gift" src="/image/045-sled.png">
+        <img id="gift" src="image/045-sled.png">
       </div>
       <h1>Welcome to Name Generator</h1>
       <h1>Secret Santa</h1>
