Add image and descriptions of games/landing page

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
 
       <div id="game">
         <img class="game-small-icon" src="landing-page/img/010-teddy-bear.png" alt="teddy">
-        <img class="game-image" src="landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-image" src="landing-page/img/dress.png" alt="Dress the elf">
 
         <div class="game-text">
-          <h3>Dress The Elf!</h3>
+          <h3>Dress The Elf</h3>
           <!-- TODO: put a description of the game and link up the url -->
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, quaerat.</p>
+          <p>Dress this little helper in time for the Christmas party</p>
           <a href="dress-the-elf/dressup.html"><p class="link-game">TRY IT OUT</p></a>
           <a href="#game-two"><i class="fas fa-caret-down"></i></a>
         </div>      
@@ -164,28 +164,28 @@
       <div id="game-two">
 
         <div class="game-text-two">
-          <h3>Let's have a race!</h3>
+          <h3>Running Game</h3>
           <!-- TODO: put a description of the game and link up the url -->
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
+            <p>Want to help the santa to tackle all obstacles?</p>
             <a href="running-game/running.html"><p class="link-game-two">TRY IT OUT</p></a>
           <a href="#game-three"><i class="fas fa-caret-down"></i></a>
         </div>   
 
         <img class="game-small-icon-two" src="landing-page/img/005-reindeer.png" alt="reindeer">
-        <img class="game-image-two" src="landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-image-two" src="landing-page/img/running.png" alt="running-game">
 
       </div>
 
       <!-- gift generator start -->
       <div id="game-three">
         <img class="game-small-icon-three" src="landing-page/img/015-christmas-tree.png" alt="gifts">
-        <img class="game-image-three" src="landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-image-three" src="landing-page/img/gift.png" alt="gift-generator">
 
         <div class="game-text-three">
 
-          <h3>Need an idea for the beloved one?</h3>
+          <h3>Gift Idea Generator</h3>
           <!-- TODO: put a description of the game and link up the url -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
+          <p>Ready for the Secret Santa gift exchange?</p>
           <a href="gift-generator/gitf-index.html"><p class="link-game-three">TRY IT OUT</p></a>
           <a href="#game-four"><i class="fas fa-caret-down"></i></a>
 
@@ -200,14 +200,14 @@
 
           <h3>To see your luck?</h3>
           <!-- TODO: put a description of the game and link up the url -->
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nam?</p>
+          <p>Can you get a bingo with 4 of them in a row?</p>
           <a href="bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
           <a href="#landingsection"><i class="fas fa-caret-up"></i></a>
 
         </div>   
 
         <img class="game-small-icon-four" src="landing-page/img/008-nutcracker.png" alt="nutcracker">
-        <img class="game-image-four" src="landing-page/img/images.png" alt="Drag and Drop">
+        <img class="game-image-four" src="landing-page/img/bingo.png" alt="bingo">
 
       </div>
 
