--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     
     <link rel="stylesheet" href="style-bingo.css">
-    <title>Ho Ho Holiday</title>
+    <title>Bingo</title>
     <!-- favicon insert -->
     <link rel="shortcut icon" type="image/png" href="../navbar+footer/snowflake.png">
 </head>
