--- a/dress-the-elf/dressup.html
+++ b/dress-the-elf/dressup.html
@@ -24,19 +24,19 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#"><p>Home</p></a>
+                            <a class="nav-link" aria-current="page" href="../index.html"><p>Home</p></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="#"><p>Dress the elf</p></a>
+                            <a class="nav-link " href="dressup.html"><p>Dress the elf</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><p>Running Game</p></a>
+                            <a class="nav-link" href="../running-game/running.html"><p>Running Game</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><p>Gift Idea Generator</p></a>
+                            <a class="nav-link" href="../gift-generator/gitf-index.html"><p>Gift Idea Generator</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><p>Bingo</p></a>
+                            <a class="nav-link" href="../bingo/bingo.html"><p>Bingo</p></a>
                         </li>
                     </ul>
                 </div>
@@ -55,6 +55,7 @@
                     <div class="BlockWrapper BlockWrapper--isDropzone" id="wrapper">
                         <img src="img/elfvectorbase.png" alt="elf" id="elf">
                         <div class="clothes">
+                            <img src="img/greendress.png" alt="dress" class="draggable">
                             <img src="img/elfdress.png" alt="dress" class="draggable">
                             <img src="img/bluedress.png" alt="dress" class="draggable">
                             <img src="img/christmasdress.png" alt="dress" class="draggable">
@@ -64,10 +65,12 @@
             </div>
         </main>
 
+
+
     <!-- footer -->
         <footer id="footer">
             <div class="footer-image">
-                <img src="../tree-image/trees.png" alt="snow">
+                <img src="../tree-image/treessmaller.png" alt="snow">
             </div>
         </footer>
 
