Add og tag + share section

--- a/index.html
+++ b/index.html
@@ -139,19 +139,30 @@
         <circle class="snow" />
       </svg>
 
+      <!-- share section start -->
+      <div class="share-btn-container">
+        <a href="#" class="facebook-btn">
+          <i class="fab fa-facebook"></i>
+        </a>
+
+        <a href="#" class="twitter-btn">
+          <i class="fab fa-twitter"></i>
+        </a>
+  
+        <a href="#" class="email-btn">
+          <i class="far fa-envelope"></i>        
+        </a>
+  
+        <a href="#" class="whatsapp-btn">
+          <i class="fab fa-whatsapp"></i>
+        </a>
+      </div>
+
       <!-- landing page start -->
       <div id="landingsection">
       <div class="landingsection">
           <div class="landingsection-text">
-            <!-- <a href="#" 
-            onclick="
-              window.open(
-                'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 
-                'facebook-share-dialog', 
-                'width=626,height=436'); 
-              return false;">
-            <i class="fab fa-facebook"></i>
-          </a> -->
+            
               <h1> <span class="christ">Christmas</span> is the time of  <br><span class=cross>family</span><br>  <span class="typing">ZOOM CALLS AND GAMES</span></h1>
               
               <a href="#game"><i class="fas fa-caret-down"></i></a>
@@ -183,7 +194,6 @@
 
         <div class="game-text-two">
           <h3>Running Game</h3>
-          <!-- TODO: put a description of the game and link up the url -->
             <p>Want to help the santa to tackle all obstacles?</p>
             <a href="running-game/running.html"><p class="link-game-two">TRY IT OUT</p></a>
           <a href="#game-three"><i class="fas fa-caret-down"></i></a>
@@ -217,7 +227,6 @@
         <div class="game-text-four">
 
           <h3>To see your luck?</h3>
-          <!-- TODO: put a description of the game and link up the url -->
           <p>Can you get a bingo with 4 of them in a row?</p>
           <a href="bingo/bingo.html"><p class="link-game-four">TRY IT OUT</p></a>
           <a href="#landingsection"><i class="fas fa-caret-up"></i></a>
@@ -235,7 +244,7 @@
     <!-- footer start here     -->
     <footer id="footer">
       <div class="footer-image">
-      <img src="tree-image/trees.png" alt="snow">
+      <img src="tree-image/treessmaller.png" alt="snow">
       </div>
     </footer>  
 
