--- a/bingo/bingo.html
+++ b/bingo/bingo.html
@@ -131,7 +131,7 @@
   <!-- footer start here     -->
   <footer id="footer">
     <div class="footer-image">
-    <img src="../tree-image/trees.png" alt="snow">
+    <img src="../tree-image/treessmaller.png" alt="snow">
     </div>
   </footer>  
 
