--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
    
     <title>Ho Ho Holiday</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D6NHH23FN8"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D6NHH23FN8');
+    </script>
+
 </head>
 
 <body>
